--- a/_posts/2024-02-28-hash.md
+++ b/_posts/2024-02-28-hash.md
@@ -2,13 +2,7 @@
 layout: post
 title: Kripto Varlık Cüzdanları
 subtitle: Kripto varlık cüzdanları nelerdir, çeşitleri ve çalışma prensibleri.
-cover-img: /assets/img/cryptocurrency_wallet.jpg
-gh-repo: boraaoz/boraaoz.github.io
-gh-badge: [star, fork, follow]
-tags: [test]
-comments: true
-mathjax: true
-author: Bora Özdek
+cover-img: /assets/img/bg.svg
 ---
 
 Kripto Varlık Cüzdanları
