--- a/_posts/2024-02-28-hash.md
+++ b/_posts/2024-02-28-hash.md
@@ -1,40 +1,83 @@
 ---
 layout: post
-title: Kripto Varlık Cüzdanları
-subtitle: Kripto varlık cüzdanları nelerdir, çeşitleri ve çalışma prensibleri.
+title: Kriptografik Hash (Özet) Fonksiyonları
+subtitle: Hash fonksiyonları nedir, blok zincirde kullanım alanları nelerdir?
 cover-img: /assets/img/bg.svg
+
 ---
 
-Kripto Varlık Cüzdanları
-========================
+Kriptografik Hash (Özet) Fonksiyonlar**ı**
+==========================================
 
-Kripto varlık cüzdanları, kısa bir tanımla, açık ve özel anahtarları saklama araçlarıdır. Blokzincir ile etkileşime girmeyi ve eşler arası kriptopara gönderme ve almayı sağlarlar. Fiziksel olarak kullandığımız cüzdanların aksine kriptovarlık cüzdanlarında, kriptovarlıklar saklanmaz. Kripto varlıklar, yalnızca blokzincirde kayıt edilen işlemlerin verileridir. Bu durumu daha iyi kavrayabilmek için bankaların kullandığı sistem ile benzerliğine bakılabilir. Bankalar da bütün paraları fiziksel olarak saklamaz, yapılan işlemlerin ve bakiyelerin kayıtlarını tutarlar. Kripto varlık gönderme ve alma işlemlerinde de işler gerçek bir takas gibi işlemez, kullanıcılar, cüzdanda saklanan özel anahtarı kullanarak varlıkların kilitlerini açarlar ve göndereceği kişinin açık anahtarını (adresini) girerek varlığın sahibini değiştirirler. Bu işlemlerin verileri blokzincirde oluşur.
+**Kriptografi ve Kripto paralar**
+---------------------------------
 
-İşlem örneği
+Tüm para birimleri, sahtecilik ve hileyi önlemek adına, çeşitli güvenlik mekanizmalarını uygulamak ve arzı kontrol etmek için farklı yollara ihtiyaç duyarlar. İtibari para birimlerinde, merkez bankaları bu görevi üstlenir, para arzını kontrol eder ve sahteciliğe karşı güvenlik önlemleri alır (Örneğin, Türk lirasında kağıt paralarda ancak ışığa tutulduğunda görülebilen görseller gizlenmiştir). Ancak, bu güvenlik önlemleri parayı taklit etmeyi imkansız hale getirmez, yalnızca taklit edilmesi zor hale getirir. Burada da devreye insanları hile ve sahtecilik yapmaktan caydırıcı kanunlar devreye girer.
 
-Kripto varlık cüzdanlarını, Açık Anahtar (Public Key), Özel Anahtar (Private Key) ve Gizli Sözcük Öbeği (Mnemonic Seed Phrase) oluşturur.
+Kripto paralar da benzer şekilde, sistemlerinin insanlar tarafından oynanıp değiştirilmemesi için güvenlik sistemlerine ihtiyaç duyar. Tabi, itibari para birimlerinin aksine, kripto para birimlerinin güvenlik kurallarının tamamen teknolojik olarak ve merkezi bir otoriteye dayanmadan uygulanması gerekir. Bu güvenlik sistemi de kripto paralarda adından anlaşılacağı gibi büyük ölçüde kriptografi ile sağlanmaktadır.
 
-Cüzdan Yapısı
+**Kriptografik Hash (Özet) Fonksiyonları**
+------------------------------------------
 
-**Açık Anahtar :** Diğer kullanıcılarla paylaştığınız cüzdan adreslerinizdir.
+Blockchain teknolojisinin ve dağıtık sistemlerin çalışma prensiplerini ve alt yapı olarak bu teknolojileri kullanan kripto paraları daha iyi kavramak adına öncelikle bazı temel kriptografik terimleri anlamamız gerekmektedir. Bunlara da ilk olarak kriptografik hash fonksiyonlarını inceleyerek başlayabiliriz.
 
-**Özel Anahtar:** Cüzdanınızdaki kripto varlıklarla işlem yapmanızı sağlayan anahtarlardır. Kimseyle paylaşılmaması gereklidir.
+Hash fonksiyonları, çeşitli uzunluktaki verilerin matematiksel fonksiyonlarla sabit uzunlukta eşsiz bir değer oluşturan fonksiyonlardır ve genel olarak aşağıdaki beş özelliği gösterirler.
 
-**Gizli Sözcük Öbeği:** Gizli sözcük öbeği, kripto para cüzdanınız tarafından üretilen ve o cüzdanla ilişkili kripto varlıklara erişmenizi sağlayan bir dizi kelimedir. Kimseyle paylaşılmaması gereklidir.
+· Çıktıların boyutları sabittir. (Görseldeki 1,2,3 ve 4 numaralı örneklerdeki gibi çıktıların hepsi aynı boyuttadır.)
 
-Genel olarak cüzdanlardan ve cüzdan yapısından bahsettiğimize göre cüzdan tiplerini inceleyebiliriz. Teknik olarak cüzdanları üç kategoriye ayrılır: Yazılım Cüzdanları, Donanım Cüzdanları ve Kağıt/Hafıza Cüzdanları.
+· Girdi değişmediği sürece aynı çıktıyı verir, yani deterministiktir. (1 ve 4 numaralı örneklerdeki gibi aynı girdiler girildiği zaman çıktıları da aynı olur.)
 
-**1) Yazılım Cüzdanları:** Yazılım cüzdanları, private key ve public keyi saklayan uygulamalardır. Kriptopara işlemlerini kontrol ederler, kriptopara göndermek, almak ve sahip olduğunuz kriptopara fonlarını görmek için arayüz sunarlar. Yazılım cüzdanlarınında farklı tiplerinden bahsedebiliriz.
+· Girdileri herhangi boyutta herhangi bir dizi olabilir. (3. örnekteki gibi anlamsız bir dizi veya Satoshi’nin “Bitcoin” yazısı gibi uzun bir metin de olabilir.)
 
-Masaüstü Cüzdanları: Masaüstü cüzdanları bilgisayarın, telefonun veya tabletin sabit sürücüsüne indirilebilen uygulamalardır. Özel anahtarlar, uygulamalarda genelde şifrelenmiş bir şekilde cüzdan dosyalarında tutulur ve anahtarların kontrolünü size bırakır. Bilgisayar, telefon veya tabletinize zararlı bir yazılım bulaştığında veya cihazınıza kötü niyetli bir kişi erişim sağladığında özel anahtarlarızın kaybolma veya çalınma riski vardır.
+· Girdilerde küçük bir değişiklik olsa bile çıktılar tamamen değişir. (1 ve 2 numaralı örneklerde yalnızca “m” harfi değişmesine rağmen çıktılar tamamen farklıdır.)
 
-Web Cüzdanları: Web cüzdanları, web tarayıcınızdan erişebildiğiniz cüzdanlardır. Özel anahtarlar kullanıcının kontrolü aksine, sunucularda tutulur, yani üçüncü parti şahıslar tarafından kontrol edilir. İnternet bağlantısına ihtiyaç duymanız ve özel anahtarlarınızın sunucularda tutulması, bu tür cüzdanları diğer cüzdanların aksine güvensiz kılar. Borsalarda kullanılan cüzdanlar, web cüzdanlarının örneğidir.
+· Hızlı olarak gerçekleşirler.
 
-**2) Donanım Cüzdanları:** Donanım cüzdanlarında özel anahtarlar çevrimdışı bir şekilde özel donanımlarda saklanır. Genellikle, bilgisayara USB arabirimi aracılığıyla bağlanırlar ve PIN kodları gibi güvenlik özellikleri içerirler. Donanım cüzdanlarında işlemler, donanımdaki (örneğin, ARM TrustZone) güvenilir bir hesaplama ortamında imzalanır ve özel anahtarlar ana bilgisayara gösterilmez. İmzalanan işlemler, donanım cüzdanının satıcısı tarafından sağlanan belirli bir API aracılığıyla cüzdan uygulamasına iletilir. Özel anahtarlara ana bilgisayardaki kötü amaçlı yazılımlar tarafından erişilemediği için, donanım cüzdanları çevrimiçi saldırılara karşı korumalıdır. Donanım cüzdanlarına Trezor ve Ledger Nano S örnek gösterilebilir.
+**Şekil 1** Hash fonksiyonlarının özellikleri
 
-**3) Kağıt ve Hafıza Cüzdanları:** Kağıt cüzdanlar, özel anahtarlarınızın bir kağıda yazılı bir şekilde saklandığı cüzdanlardır. Benzer şekilde Hafıza cüzdanları da “mnemonic seed phrase” leri akılda tutarak keylere ulaşılan cüzdanlardır. Kelimeleri farklı hafıza teknikleri kullanılarak hafızanızda tutabilirsiniz. Örneğin, sırasıyla kelimelerden bir hikaye oluşturmak, “mnemonic seed phrase” hatırlamanıza yardımcı olacaktır. Kağıt ve Hafıza cüzdanları soğuk cüzdan örneği olduklarından, online işlemlerde bulunmazlar böylece internetteki tehditelere karşı korumalıdır. Fakat keylerin bulunduğu kağıdı kaybetmeniz veya hafızanızdaki “mnemonic seed phrase” unutursanız, özel anahtarlarınızı kaybedersiniz.
+Bir hash fonksiyonunun kriptografik ölçekte güvenli olması için yukarıda bahsettiğimiz özelliklere ek olarak üç özelliğe daha sahip olması gerekir: Çakışma — dayanıklılığı, tersine işlem dayanıklılığı ve ikincil tersine işlem dayanıklılığı. Blok zincir sisteminin güvenli bir şekilde çalışmasında büyük önem taşıyan bu özellikleri ayrıntılarıyla inceleyelim.
 
-Özet olarak, her cüzdan türünün kendine özgü avantajları ve dezavantajları var. Örneğin, web cüzdanları kullanım kolaylığı sunarken, güvenlik riskleri taşıyabilir. Donanım cüzdanları ise yüksek güvenlik sağlar ancak fiziksel bir cihaz gerektirir. Kağıt veya hafıza cüzdanları ise çevrimdışı saklama imkanı sunar ancak fiziksel bir nesne ya da hafıza gerektirir.
+**1)** **Çakışma Dayanıklılığı (Colision — Resistance)**
 
-[**_Contact with me!_**](http://boraaoz.github.io)
---------------------------------------------------
+Birbirinden farklı iki girdinin hash değerlerinin aynı olması durumuna çakışma denir. Eğer bir hash fonksiyonunda hiç kimse çakışma bulamıyorsa bu hash fonksiyonu çakışmaya dayanıklı kabul edilir.
+
+**Şekil 2** Görselde, “Bit” ve “Qubit” girdileri hash fonksiyonuyla işlem gördükten sonra aynı çıktıyı vermişler, yani çakışma durumu gerçekleşmiştir.
+
+Tabi hiç kimsenin çakışma bulamaması, çakışma olmayacağı anlamına gelmez. Çakışmalar herhangi bir hash fonksiyonu için her zaman var olacaktır, bunu da basit bir şekilde kanıtlayabiliriz. Hash fonksiyonunun girdileri herhangi boyutta herhangi bir dizi olabileceği için girdi kümesi sınırsızıdır, fakat çıktıların boyutları sabit olacağından çıktı kümesinin eleman sayısı sınırlıdır. Örneğin, 256-bit boyutunda çıktı veren bir hash fonksiyonu ele alalım, 2²⁵⁶ + 1 adet farklı girdi seçip, her bir girdinin hashlerini hesaplarsak, girdi kümesi eleman sayısı (2²⁵⁶ + 1 ) çıktı kümesinde (2²⁵⁶) daha büyük olduğundan en az bir çakışma gözlemleyebileceğizdir.
+
+**Şekil 3** Girdi sayısı çıktı sayısını aştığından, hash fonksiyonunun birden fazla girdiyi eşlediği en az bir çıktı olmalıdır. “Qubit” gidisi diğer girdilerin çıktılarından biriyle eşleşmek durumunda kalacaktır.
+
+Her hash fonksiyonunun çakışma denetleme sistemleri vardır. Fakat, bu sistemler ile hash fonksiyonlarının çakışmaya dayanıklı olduğunu saptamak oldukça çok zaman alır. Mesela, 256-bit çıktı veren bir hash fonksiyonunun denetlemek için daha önceki örnekte belirttiğimiz gibi en kötü ihtimal ile 2²⁵⁶+1 girdinin hashinin hesaplanması, ortalama olarakta 2¹²⁸ girdinin hashinin hesaplanması gerekir. Bir bilgisayarın saniyede 10000 hash değeri hesapladığını düşünürsek, bu işlem bu bilgisayarın tek başına çalışmasıyla ortalama 1028 yıl sürer. Bu da oldukça fazla bir zaman demektir. Bu yüzden şu ana kadar da hiçbir fonksiyonun çakışmaya dayanıklı olduğu ispatlanamamıştır, ancak uzun çalışmaların ardından eski MD5 hash fonksiyonunda çakışmaların varlığı tespit edilmiştir (Ardından, kullanımdan kaldırılıp güncellendi. Şu anda yeni MD5’ta herhangi bir çakışma bulunamadı.) Kısacası, kriptografik hash fonksiyonlarında çakışmalar kaçınılmazdır, fakat bazı fonksiyonlar dayanıklı kabul edilecek kadar güçlüdür. Bu yüzden bu tür fonksiyonları çakışmaya dayanıklı kabul edip birçok alanda kullanıyoruz.
+
+**2)** **Tersine İşlem Dayanıklılığı (Pre-image Resistance)**
+
+Hash fonksiyonlarının kriptografik ölçekte güvenli olmasını sağlayan bir diğer özellik tersine işlem dayanıklılığıdır. Tersine işleme dayanıklı fonksiyonlar tek yönlü çalışırlar. Yani çıktıdan kaynak veriye (girdiye) geri dönüş yapılamaz.
+
+**Şekil 4** Çıktıdan kaynak veriyi saptayamayacağımızın görsel anlatımı.
+
+Kaynak veriyi saptayamayız değil, saptamak zordur diye belirttik, çünkü girdi kümesindeki elemanların hash değerlerini hesaplayıp çıktı kümesindeki hash değerleriyle karşılaştırırsak, kaynak veriyi saptayabiliriz. Kriptografik hash fonksiyonlarında da kaynak veriyi saptama olasılığı ne kadar düşük olursa, (girdi kümesindeki eleman sayısı ne kadar fazla olursa) hash fonksiyonu da o kadar tersine işleme dayanıklıdır.
+
+Tersine işlem dayanıklılığı verinin korunmasına yönelik değerli bir özelliktir çünkü mesajın basit bir hashi bilgiyi paylaşma gereksinimi olmadan bu mesajın doğruluğunu kanıtlayabilir. Uygulamada birçok hizmet sağlayıcı ve web uygulaması, düz metin olarak şifreler yerine şifrelerden oluşturulmuş hashleri saklar ve kullanır.
+
+**3)** **İkincil Tersine İşlem Dayanıklılığı (Second Pre-image Resistance)**
+
+İkinci terine işlem dayanıklılığı, belirli bir mesajla aynı koda sahip alternatif bir mesajın bulunamaması özelliğidir. Ancak bir kişi halihazırda bilinen bir girdinin yarattığı bir çıktıyla aynı çıktıyı yaratan belirli bir girdi arayabilir. Aslında, bu işlem bir çakışma bulmayı içerir ama aynı hashi yaratan iki rastgele girdi aramak yerine, belirli bir girdi tarafından yaratılan hashin aynısını yaratan başka bir girdi aranır. Bu nedenle, çakışmaya dayanıklı bir hash fonksiyonu ikincil tersine işleme de dayanıklıdır. Fakat, çakışmaya dayanıklı fonksiyonlara yine de ters görüntü saldırıları yapılabilir çünkü burada tek bir çıktıdan tek bir girdi bulunur.
+
+Blockchain teknolojisindeki en önemli yapı taşlarından biri olan kriptografik hash fonksiyonlarının ne olduğunu öğrendiğimize göre blokchain’deki kulanım alanlarından bahsedebiliriz.
+
+Blockchain, adı üstünde bloklardan ve zincirlerden oluşur. Blokların içerisinde, blok numarası, transferler (veya herhangi bir veri), nonce değeri ve önceki bloğa ait hash kodu vardır. Bütün bu bilgiler hash fonksiyonu aracılığıyla özetlenir ve bu özet bilgi (hash değeri) bir sonraki blokta yer alır. Her bloğun hash değerinin bir sonraki blokta yer alması sayesinde de zincir kavramı oluşur.
+
+**Şekil 5** Blokchaindeki zincir yapısının görsel anlatımı.
+
+Zincir kavramıyla birlikte bloktaki veriler değiştirilemez hale gelir ve verilerin bütünlüğü korunur. Eğer herhangi bir bloktaki blok bilgisi (Bloktaki veri, nonce değeri vb.) değiştirilirse hash değeride değişecek ve bu geriye dönük değiştirme işlemi ağ düğümleri tarafından anlaşılacaktır.
+
+Diğer bir kullanım alanı olan madenciliğe de ilgili bir diğer yazımda detaylı bir şekilde değineceğim.
+
+Bir sonraki yazıda görüşmek üzere, hoşçakalın.
+
+Kaynaklar:
+
+1.  [https://www.researchgate.net/profile/Geetha-Ganesan/publication/267422045\_Cryptographic\_Hash\_Functions\_A\_Review/links/549cf6d10cf2b8037138c35c/Cryptographic-Hash-Functions-A-Review.pdf](https://www.researchgate.net/profile/Geetha-Ganesan/publication/267422045_Cryptographic_Hash_Functions_A_Review/links/549cf6d10cf2b8037138c35c/Cryptographic-Hash-Functions-A-Review.pdf)
+2.  [https://www.e-reading-lib.com/bookreader.php/141503/Preneel\_-\_Analysis\_and\_Design\_of\_Cryptographic\_Hash\_Functions.pdf](https://www.e-reading-lib.com/bookreader.php/141503/Preneel_-_Analysis_and_Design_of_Cryptographic_Hash_Functions.pdf)
+
+[Bora Ozdek](https://twitter.com/boraaoz)
